target/generated-sources/archetype/target/classes/archetype-resources/openshift/service-route.yml

apiVersion: v1
kind: Service
metadata:
  name: quarkus-prueba1
spec:
  selector:
    deployment: quarkus-prueba1
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081


---


apiVersion: route.openshift.io/v1        
kind: Route
metadata:
  name: quarkus-prueba1
spec:
  to:
    kind: Service
    name: quarkus-prueba1
    weight: 100
  port:
    targetPort: 8081
